<resources>
    <string name="app_name">Smishing Detection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_login_in">Login</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">App Logo</string>
    <string name="no_network_message">No available network. Please check your internet connection or try again later</string>
    <string name="login_page">Login</string>
    <string name="detections_str">Detections</string>
    <string name="menu_news">News</string>
    <string name="menu_Cyber_news">Krebs on Security News</string>
    <string name="menu_settings">Settings</string>
    <string name="account_page">Account</string>
    <string name="report_page">Report Smishing</string>
    <string name="filtering_page">Smishing Rules</string>
    <string name="debug">Debug</string>
    <string name="help_page">Help</string>
    <string name="sms_page">SMS Messages</string>
    <string name="detectionsBtn">Detections</string>
    <string name="new_detectionsTxt">New detections</string>
    <string name="total_detectionsTxt">Total detections</string>
    <string name="password_changeBtn">Password</string>
    <string name="phone_changeBtn">Phone</string>
    <string name="email_changeBtn">Email</string>
    <string name="dark_modeBtn">Dark mode</string>
    <string name="delete_accountBtn">Delete account</string>
    <string name="sign_outBtn">Sign out</string>
    <string name="change_password_page">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="change_email_page">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm Email</string>
    <string name="sign_out_page">Sign Out</string>
    <string name="confirmSOTxt">Do you want to sign out?</string>
    <string name="cancelSOBtn">Cancel</string>
    <string name="delete_acc_page">Delete Account</string>
    <string name="confirmDelTxt">Are you sure?</string>
    <string name="confirmPNBtn">Change Phone Number</string>
    <string name="confirmPN">Enter your phone number:</string>
    <string name="phone_number_page">Change Phone Number</string>
    <string name="confirm_PNTxt">New number must be associated with this phone.</string>
    <string name="cancelDelBtn">Cancel</string>
    <string name="confirmDelBtn">Yes</string>
    <string name="confirmPW">Enter your password:</string>
    <string name="phone_number">Phone Number</string>
    <string name="report_message_prompt">Smishing message</string>
    <string name="action_report">Send report</string>
    <string name="account_btn">Account</string>
    <string name="notifications_btn">Notifications</string>
    <string name="filtering_btn">Filtering</string>
    <string name="report_btn">Report</string>
    <string name="help_btn">Help</string>
    <string name="keywords_label">Keywords</string>
    <string name="pn_label">Phone numbers</string>
    <string name="set_keyword_btn">Set keywords</string>
    <string name="set_pn_btn">Set numbers</string>
    <string name="name_label">Full Name</string>
    <string name="email_label">Email</string>
    <string name="pn_register_label">Phone Number</string>
    <string name="pw_register_label">Password</string>
    <string name="pw2_register_label">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="terms_and_conditions">View Terms and Conditions</string>
    <string name="agree_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="pnTitle">Phone Number: </string>
    <string name="msgTitle">Message: </string>
    <string name="dateTitle">Date: </string>
    <string name="info_icon">info</string>
    <string name="new_icon">info</string>
    <string name="time_icon">info</string>
    <string name="notification_header">Notifications</string>
    <string name="news_notification_title">News Updates</string>
    <string name="smishing_detection_notification_title">Smishing Detections</string>
    <string name="spam_detection_notification_title">Spam Detections</string>
    <string name="password_security_check">Password Security Checks</string>
    <string name="backup_reminder">Backup Reminders</string>
    <string name="update_notifications">Update Notifications</string>
    <string name="incident_reports">Incident Reports</string>
    <string name="open_notification_settings">Device Notification Settings</string>
    <string name="detection_notification_header">Detection Notifications</string>
    <string name="push_notification_header">Push Notifications</string>
    <string name="system_maintenance_header">System Maintenance Notifications</string>
    <string name="detection_channel_name">Detection Alerts</string>
    <string name="detection_channel_id">detections_channel</string>
    <string name="detection_channel_desc">Detection Notifications Channel</string>
    <string name="push_channel_name">Push Notifications</string>
    <string name="push_channel_id">push_channel</string>
    <string name="push_channel_desc">Push Notifications Channel</string>
    <string name="system_channel_name">System Notifications</string>
    <string name="system_channel_id">system_channel</string>
    <string name="system_channel_desc">system Notifications Channel</string>
    <string name="smish_pref_key">smish_notif_pref</string>
    <string name="spam_pref_key">spam_notif_pref</string>
    <string name="news_pref_key">news_notif_pref</string>
    <string name="incident_pref_key">incident_notif_pref</string>
    <string name="update_pref_key">update_notif_pref</string>
    <string name="backup_pref_key">backup_notif_pref</string>
    <string name="password_pref_key">password_notif_pref</string>
    <string name="what_is_the_app_for">What is the app for?</string>
    <string name="how_to_use_the_app">how_to_use_the_app?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">a882bbf5f21b40a3b145509fe1f58e33</string>
    <string name="refresh">Refresh</string>
    <string name="click_to_read_more">Click to Read More</string>
    <string name="message_details">Message Details</string>
    <string name="message_sender">Message Sender</string>
    <string name="message_body">Message Body</string>
    <string name="dummy_smishing_report">This SMS message contains some text that might indicate it is a scam! Please beware!</string>
    <string name="empty_sms">There are no SMS messages.</string>
    <string name="back_button">Back</string>
    <string name="app_logo">App Logo</string>
    <string name="faq_page">FAQ</string>
    <string name="faq_question_1">What is this app for?</string>
    <string name="faq_answer_1">This app is designed to detect and prevent smishing attacks.</string>
    <string name="faq_question_2">How does it work?</string>
    <string name="faq_answer_2">The app analyzes incoming SMS messages for potential threats using advanced algorithms.</string>
</resources>